2004-02-27  Sven Herzberg  <herzi@abi02.de>

	* macros2/autogen.sh: fix #135557

2004-02-17  Mark McLoughlin  <mark@skynet.ie>

	* doc-build/xmldocs.make: fix one last occurrence of
	not using $(DESTDIR).

=== gnome-common 2.4.0 ===

2003-10-02  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* doc-build/Makefile.am: Distribute README in place of the
	non-existent ChangeLog. Doh!

	* autogen.sh: Use the GNOME 2 autogen.sh script by default.
	* configure.in: Version number bumped.

2003-08-23  Marco Pesenti Gritti  <marco@gnome.org>

	* macros2/compiler-flags.m4:

	Define WARN_CXXFLAGS instead of overwriting
	CXXFLAGS (like WARN_FLAGS).

2003-07-04  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* macros2/compiler-flags.m4: don't use -Wsign-promo, it is 
	C++ only and causes warnings with gcc 3.3 when used on C.

2003-06-24  Marco Pesenti Gritti  <marco@it.gnome.org>

	* macros2/autogen.sh:

	Remove --enable-compile-warnings from the default arguments
	passed to configure because it break GNOME_COMPILE_WARNINGS
	macro.

2003-05-24  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* MAINTAINERS: Put myself in as maintainer.

	* configure.in: Bump the version number to 2.3.0

	* configure.in, Makefile.am, macros2/autogen.sh, doc-build/*:
	Add in the infrastructure to allow user documentatin to be built
	from some common files. This will not affect existing packages.
	The changes required to use this are given in doc-build/README.

2003-02-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* macros2/autogen.sh: set WANT_AUTOCONF_2_5 variable to tell 
	Mandrake autoconf wrapper we want to check if autoconf 2.5x is here..

2003-02-18  Jody Goldberg <jody@gnome.org>

	* configure.in : Don't depend on a file that James just deleted

2002-12-12  Jody Goldberg <jody@gnome.org>

	* macros2/gnome-common.m4 (GNOME_DEBUG_CHECK) : now that autoconf-2.52
	  is a prereq for things the build broke on the use of
	      AC_DEFINE(GNOME_ENABLE_DEBUG) 