@@ -1,28 +1,21 @@
-# Note this is NOT a relocatable thing :)
-%define name		gnome-common
-%define ver		@VERSION@
-%define RELEASE		0_cvs_0
-%define rel		%{?CUSTOM_RELEASE} %{!?CUSTOM_RELEASE:%RELEASE}
-%define prefix		/usr
-%define sysconfdir	/etc
-
-Name:		%name
-Summary:	gnome-common contains usefull things common to building gnome packages
-Version: 	%ver
-Distribution:	GNOME
-Vendor:		CVS
-Release: 	%rel
-Copyright: 	GPL
-Group:		Development/Tools
-Source: 	%{name}-%{ver}.tar.gz
-URL: 		http://gnome.org
-BuildRoot:	/var/tmp/%{name}-%{ver}-root
-Docdir: 	%{prefix}/doc
+Name: gnome-common
+Summary: gnome-common contains usefull things common to building gnome packages
+Version: @VERSION@
+Release: 0
+License: GPL
+Group: Development/Tools
+Source: %{name}-%{version}.tar.gz
+URL: http://developer.gnome.org/
+BuildArch: noarch
+BuildRoot: %{_tmppath}/%{name}-%{version}-root
 
 %description
-gnome-common is for developing various GNOME modules that have to do similar things
+Contains files required to bootstrap various Gnome modules when building
+from CVS.
 
 %changelog
+* Thu May 13 2004 James Henstridge <james@daa.com.au>
+- update and simplify
 * Mon Mar 26 2000 Robin * Slomkowski <rslomkow@rslomkow.org>
 - created this thing, and replaced the generic specfile
 
@@ -30,53 +23,17 @@ gnome-common is for developing various GNOME modules that have to do similar thi
 %setup
 
 %build
-%ifarch alpha
-  MYARCH_FLAGS="--host=alpha-redhat-linux"
-%endif
 
-LC_ALL=""
-LINGUAS=""
-LANG=""
-export LC_ALL LINGUAS LANG
-
-CFLAGS="$RPM_OPT_FLAGS" ./configure $MYARCH_FLAGS \
-	--prefix=%{prefix} \
-	--enable-platform-gnome-2 \
-	--sysconfdir=%{sysconfdir}
-
-if [ "$SMP" != "" ]; then
-  (make "MAKE=make -k -j $SMP"; exit 0)
-  make
-else
-  make
-fi
+%configure
+make
 
 %install
-[ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
 
-make prefix=$RPM_BUILD_ROOT%{prefix} sysconfdir=$RPM_BUILD_ROOT%{sysconfdir} install
-
-for FILE in "$RPM_BUILD_ROOT/bin/*"; do
-	file "$FILE" | grep -q not\ stripped && strip $FILE
-done
-
-%clean
-[ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
-
-%post
-if ! grep %{prefix}/lib /etc/ld.so.conf > /dev/null ; then
-  echo "%{prefix}/lib" >> /etc/ld.so.conf
-fi
-  
-/sbin/ldconfig
-  
-%postun -p /sbin/ldconfig
+%makeinstall
 
 %files
 
-%defattr(0555, bin, bin)
-%{prefix}/bin/*
-
-%defattr (0444, bin, bin)
-%{prefix}/share/aclocal/gnome-macros/*
-%{prefix}/share/aclocal/gnome2-macros/*
+%defattr(-, root, root)
+%{_bindir}/*
+%{_datadir}/aclocal/*
+%{_datadir}/gnome-common
