@@ -1,3 +1,7 @@
+2004-05-13  James Henstridge  <james@daa.com.au>
+
+	* gnome-common.spec.in: simplify and update spec file.
+
 2004-02-27  Sven Herzberg  <herzi@abi02.de>
 
 	* macros2/autogen.sh: fix #135557
